--- a/Discount.html
+++ b/Discount.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout</title>
+    <title>Discount</title>
     <link rel="stylesheet" href="discount.css">
 </head>
 
